Changes by edo